--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="container">
-      <video id='videoTag' width="240px" height="120px" autoplay muted playsinline> </video>
+      <video id='videoTag' width="240px" height="120px" style='display:none;' autoplay muted playsinline> </video>
       <div class="canvas-container">
         <canvas id="output_canvas" width="1080px" height="720px"> </canvas>
       </div>
